--- a/index.html
+++ b/index.html
@@ -96,13 +96,14 @@
                     Currently pursuing a Bachelor's Degree in Information Technology, Business Analytics, Joel is an
                     individual who enjoys bringing his envisioned ideas come to life through graphic design. As he
                     continues to complete his tertiary education, his main purpose of starting a freelance commission is
-                    due to his drive of wanting to support his family after countless years of being supported by them.
+                    to
+                    learn more, gain experience and hone his craft in developing appealing multimedia designs and
+                    websites.
+                    His main driver for his motivation comes from his need to support his family to the best he can.
                 </p>
                 <p>
                     Apart from being a part-time freelancer and student, Joel has taken up responsibilities in
-                    coorrdinating social media accounts as well as designing content for them. Evidently, most of the
-                    projects
-                    created are purposefully for these entities.
+                    coorrdinating social media accounts as well as designing content for them.
                 </p>
             </div>
         </div>
