changed absolute pathing of images

--- a/posters.html
+++ b/posters.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class=" col-lg-4 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/sabbath.jpg">
+                    <img class="card-img-top" src="images/sabbath.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Special Talk Poster</h5>
                         <p class="card-text">
@@ -76,7 +76,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/covid.jpg">
+                    <img class="card-img-top" src="images/covid.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Special Announcement Poster</h5>
                         <p class="card-text">
@@ -94,7 +94,7 @@
 
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/recruitment.jpg">
+                                <img class="card-img-top" src="images/recruitment.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Recruitment Poster (Front)</h5>
                                     <p class="card-text">This poster was meant to promote recruitments for the 25th
@@ -103,7 +103,7 @@
                             </div>
 
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/recruitment-b.jpg">
+                                <img class="card-img-top" src="images/recruitment-b.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Recruitment Poster (Back)</h5>
                                     <p class="card-text">The back shows the available roles for recruitment.</p>
@@ -134,7 +134,7 @@
 
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/un-hc-jp.jpg">
+                                <img class="card-img-top" src="images/un-hc-jp.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Homecoming Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night titled
@@ -145,7 +145,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/un-hc-ray.jpg">
+                                <img class="card-img-top" src="images/un-hc-ray.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night titled
@@ -156,7 +156,7 @@
 
                             <!-- Slide 3 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/un-hc-eze.jpg">
+                                <img class="card-img-top" src="images/un-hc-eze.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Homecoming Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night titled
@@ -189,7 +189,7 @@
                         <div class="carousel-inner">
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/3-pray.jpg">
+                                <img class="card-img-top" src="images/3-pray.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night via
@@ -200,7 +200,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/2-fellowship.jpg">
+                                <img class="card-img-top" src="images/2-fellowship.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night via
@@ -211,7 +211,7 @@
 
                             <!-- Slide 3 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/1-worship.jpg">
+                                <img class="card-img-top" src="images/1-worship.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">This poster was meant to promote a gathering night via
