--- a/cards.html
+++ b/cards.html
@@ -74,7 +74,7 @@
 
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/un-card.jpg">
+                                <img class="card-img-top" src="images/un-card.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Guest Card (Front)</h5>
                                     <p class="card-text">This card was given to newcomers to introduce and welcome them
@@ -83,7 +83,7 @@
                             </div>
 
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/un-card-b.jpg">
+                                <img class="card-img-top" src="images/un-card-b.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Guest Card (Back)</h5>
                                     <p class="card-text">The back comprises of a welcome message, socials and contacts.
@@ -115,7 +115,7 @@
 
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/icf-card.jpg">
+                                <img class="card-img-top" src="images/icf-card.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Club Card</h5>
                                     <p class="card-text">This card was meant to shpw the theme of the club and was given
@@ -125,7 +125,7 @@
                             </div>
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/icf-card-b.jpg">
+                                <img class="card-img-top" src="images/icf-card-b.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title">Club Poster</h5>
                                     <p class="card-text">The back shows future events, socials and contacts.
@@ -152,7 +152,7 @@
         <div class="row">
             <div class=" col-lg-6 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/postcard.jpg">
+                    <img class="card-img-top" src="images/postcard.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Postcard</h5>
                         <p class="card-text">
