--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- Home -->
         <div class="background pb-3">
-            <img src="/Portfolio/images/bg-1.jpg" class="img-fluid">
+            <img src="images/bg-1.jpg" class="img-fluid">
         </div>
         <div class="heading-content text-center">
             <h5>Hello, I'm</h5>
@@ -86,7 +86,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-12">
-                <img src="/Portfolio/images/christmas-solo-3.jpg" class="img-fluid" width="85%">
+                <img src="images/christmas-solo-3.jpg" class="img-fluid" width="85%">
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <br>
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/sabbath.jpg">
+                    <img class="card-img-top" src="images/sabbath.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Event Poster</h5>
                         <p class="card-text">
@@ -140,7 +140,7 @@
                         <div class="carousel-inner">
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/3-pray.jpg">
+                                <img class="card-img-top" src="images/3-pray.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">These are countdown posters for an event. Scroll to view the
@@ -152,7 +152,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/2-fellowship.jpg">
+                                <img class="card-img-top" src="images/2-fellowship.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">These are countdown posters for an event. Scroll to view the
@@ -164,7 +164,7 @@
 
                             <!-- Slide 3 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/1-worship.jpg">
+                                <img class="card-img-top" src="images/1-worship.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Countdown Poster</h5>
                                     <p class="card-text">These are countdown posters for an event. Scroll to view the
@@ -197,7 +197,7 @@
                         <div class="carousel-inner">
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/recruitment.jpg">
+                                <img class="card-img-top" src="images/recruitment.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Recruitment Poster</h5>
                                     <p class="card-text">This poster was meant to be used as the recruitment poster for
@@ -210,7 +210,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/recruitment-b.jpg">
+                                <img class="card-img-top" src="images/recruitment-b.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Recruitment Poster</h5>
                                     <p class="card-text">This poster was meant to be used as the recruitment poster for
@@ -258,7 +258,7 @@
                         <div class="carousel-inner">
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/un-card.jpg">
+                                <img class="card-img-top" src="images/un-card.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Guest Card</h5>
                                     <p class="card-text">This was designed as a visitor's card. Behind the card shows a
@@ -270,7 +270,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/un-card-b.jpg">
+                                <img class="card-img-top" src="images/un-card-b.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Guest Card</h5>
                                     <p class="card-text">This was designed as a visitor's card. Behind the card shows a
@@ -304,7 +304,7 @@
 
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
-                                <img class="card-img-top" src="/Portfolio/images/icf-card.jpg">
+                                <img class="card-img-top" src="images/icf-card.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Event Card</h5>
                                     <p class="card-text">This event card was designed not only to promote the club, but
@@ -321,7 +321,7 @@
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
-                                <img class="card-img-top" src="/Portfolio/images/icf-card-b.jpg">
+                                <img class="card-img-top" src="images/icf-card-b.jpg">
                                 <div class="card-body carousel-caption">
                                     <h5 class="card-title">Club Card</h5>
                                     <p class="card-text">This event card was designed not only to promote the club, but
@@ -349,7 +349,7 @@
 
             <div class="col-lg-6 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/postcard.jpg">
+                    <img class="card-img-top" src="images/postcard.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Postcard</h5>
                         <p class="card-text">This postcard was to depict a student's lifestyle of the alma
@@ -375,7 +375,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top w-70" src="/Portfolio/images/movie.jpg">
+                    <img class="card-img-top w-70" src="images/movie.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Fictional Movie Poster</h5>
                         <p class="card-text">This poster was designed to depict a fictional movie. Click to view
