--- a/personal.html
+++ b/personal.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class=" col-lg-6 col-md-6 col-12 pb-5">
                 <div class="card">
-                    <img class="card-img-top" src="/Portfolio/images/movie.jpg">
+                    <img class="card-img-top" src="images/movie.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Movie Poster</h5>
                         <p class="card-text">
