--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1>Joel Balang</h1>
             </div>
             <div data-aos="fade-right">
-                <p>GRAPHIC DESIGNER | DATA ANALYST</p>
+                <p>GRAPHIC | MULTIMEDIA DESIGNER</p>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
                 <hr>
                 <p>
                     Currently pursuing a Bachelor's Degree in Information Technology, Business Analytics, Joel is an
-                    individual who enjoys bringing his envisioned ideas come to life through graphic design. As he
+                    individual who strives to bring his envisioned ideas come to life through graphic design. As he
                     continues to complete his tertiary education, his main purpose of starting a freelance commission is
                     to
                     learn more, gain experience and hone his craft in developing appealing multimedia designs and
@@ -233,9 +233,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn w-25 mx-auto">
-                <a href="posters.html">See More</a>
-            </button>
+            <a href="posters.html" class="btn w-25 mx-auto">See More</a>
         </div>
     </div>
 
@@ -360,9 +358,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn w-25 mx-auto">
-                <a href="cards.html">See More</a>
-            </button>
+            <a href="cards.html" class="btn w-25 mx-auto">See More</a>
         </div>
     </div>
 
@@ -387,9 +383,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn w-25 mx-auto">
-                <a href="personal.html">See More</a>
-            </button>
+            <a href="personal.html" class="btn w-25 mx-auto">See More</a>
         </div>
     </div>
 </body>
