--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
             <a href="personal.html" class="btn w-25 mx-auto">See More</a>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 
 <!-- Footer -->
@@ -411,5 +413,3 @@
 </footer>
 
 </html>
-
-<script src="test.js"></script>
