--- a/personal.html
+++ b/personal.html
@@ -76,6 +76,7 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 <!-- Footer -->
@@ -100,5 +101,3 @@
 </footer>
 
 </html>
-
-<script src="test.js"></script>
