--- a/posters.html
+++ b/posters.html
@@ -233,6 +233,7 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 <!-- Footer -->
@@ -257,5 +258,3 @@
 </footer>
 
 </html>
-
-<script src="test.js"></script>
