--- a/cards.html
+++ b/cards.html
@@ -162,6 +162,7 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 <!-- Footer -->
@@ -186,5 +187,3 @@
 </footer>
 
 </html>
-
-<script src="test.js"></script>
